fixed alignment with main content

--- a/FrontEnd/VitalSense/src/App.css
+++ b/FrontEnd/VitalSense/src/App.css
@@ -12,11 +12,16 @@ body {
   text-align: center; 
   width: 100%;
   display: flex;
-  flex-direction: column;
+  
   justify-content: center;
   height: calc(100% - 60px); 
   padding-top: 60px; 
 }
+
+.content-container{
+  display: flex;
+}
+
 
 .button {
   background-color: #efa9b2;
